# init

./: .env.example  .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  README.md  emulate.config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: settings.json
.codex/environments/: environment.toml
.cursor/rules/: database.mdc  mutations.mdc
.github/: copilot-instructions.md  renovate.json
.github/workflows/: ci.yml  openwiki-update.yml
apps/chrome-extension/: manifest.config.ts  package.json  tsconfig.json  vite.config.ts
apps/desktop/: dev-app-update.yml.example  electron-builder.yml  electron-vite.config.ts  electron.vite.config.ts  eslint.config.js  package.json  tsconfig.json  tsconfig.node.json  tsdown.config.ts  turbo.json
apps/electron/: electron-builder.yml  electron-vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json  turbo.json
apps/expo/: package.json  tsconfig.json
apps/extension/: doctor.config.json  eslint.config.js  manifest.config.ts  package.json  tsconfig.json  turbo.json  vite.config.ts  wxt.config.ts
apps/mobile/: app.config.ts  doctor.config.json  eas.json  eslint.config.ts  package.json
apps/nextjs/: next.config.js  package.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/tauri/src-tauri/src/app/: config.rs  invoke.rs  menu.rs  mod.rs  setup.rs  window.rs
scripts/: bootstrap.ts  remove-electron.sh  remove-expo.sh  remove-extension.sh  remove-tauri.sh  setup.sh  setup.ts
(+268 files in other folders)
