[package]
name = "init"
version = "0.1.0"
description = "Init Desktop App"
edition = "2021"

[lib]
name = "init_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "z"
strip = true
